# alfred-launchd-monitor

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  README.md  launchd_monitor.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: ruff-check.sh  ty-check.sh
.githooks/: pre-commit
tests/fixtures/: launchctl_list.txt  print_disabled.txt  print_disabled_modern.txt  print_exited.txt  print_running.txt  print_running_embedded_braces.txt  sample.plist
tests/unit/: test_action_contract.py  test_build_detail.py  test_build_info_plist.py  test_config.py  test_discovery.py  test_dispatch.py  test_dispatch_functions.py  test_emit_detail.py  test_emit_list.py  test_main.py  test_parsers.py  test_plist.py  test_print_parser.py  test_resolve_path.py  test_smoke.py  test_state.py  test_subprocess.py
tools/: build_info_plist.py  package.sh  setup.sh
